Fixing the overflow

--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -11,12 +11,11 @@
 .gallery {
     grid-column-start: 1;
     grid-column-end: 3;
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     bottom: 0;
     width: 100%;
     height: 100%;
-    overflow: scroll;
 }
 
 .gallery-container {
@@ -24,7 +23,6 @@
     width: 100%;
     display: flex;
     gap: 10px;
-    padding: 100px 2vw;
 }
 
 .column {
